support to generate graalvm native image Feature